// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render Expense summary with 1 expense 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpenseSummery
    expenseCount={1}
    expenseTotal={233}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <h1>
         Viewing 
        1
         
        expense
         totalling 
        $2.3
</h1>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          " Viewing ",
          1,
          " ",
          "expense",
          " totalling ",
          "$2.3",
        ],
      },
      "ref": null,
      "rendered": Array [
        " Viewing ",
        1,
        " ",
        "expense",
        " totalling ",
        "$2.3",
      ],
      "type": "h1",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <h1>
           Viewing 
          1
           
          expense
           totalling 
          $2.3
</h1>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            " Viewing ",
            1,
            " ",
            "expense",
            " totalling ",
            "$2.3",
          ],
        },
        "ref": null,
        "rendered": Array [
          " Viewing ",
          1,
          " ",
          "expense",
          " totalling ",
          "$2.3",
        ],
        "type": "h1",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should correctly render Expense summary with multiple expense 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpenseSummery
    expenseCount={21}
    expenseTotal={225555533}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <h1>
         Viewing 
        21
         
        expenses
         totalling 
        $2255555.3
</h1>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          " Viewing ",
          21,
          " ",
          "expenses",
          " totalling ",
          "$2255555.3",
        ],
      },
      "ref": null,
      "rendered": Array [
        " Viewing ",
        21,
        " ",
        "expenses",
        " totalling ",
        "$2255555.3",
      ],
      "type": "h1",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <h1>
           Viewing 
          21
           
          expenses
           totalling 
          $2255555.3
</h1>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            " Viewing ",
            21,
            " ",
            "expenses",
            " totalling ",
            "$2255555.3",
          ],
        },
        "ref": null,
        "rendered": Array [
          " Viewing ",
          21,
          " ",
          "expenses",
          " totalling ",
          "$2255555.3",
        ],
        "type": "h1",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
